@@ -4,12 +4,15 @@
 # License GNU General Public License version 2 or later; see LICENSE.txt, see LICENSE.php
 # Note : All ini files need to be saved as UTF-8 - No BOM
 
-CHECKED-IN=Checked in
-CHECKED OUT ITEMS HAVE NOW BEEN ALL CHECKED IN=All checked out Items have now been checked in.
+CHECKED-IN=checked in
+CHECKED OUT ITEMS HAVE NOW BEEN ALL CHECKED IN=All checked-out items have now been checked in.
 CHECKING TABLE=Checking table
-DATABASE TABLE=Database table
+CHECKING=Checking
+TABLE=table
+DATABASE_TABLE=Database Table
 DESCITEMCHECKEDIN=All checked out Items have now been checked in.
 GLOBAL CHECK-IN=Global Check-in
 ITEMS=Items
-NUM OF ITEMS=Number of Items
+NUMBER_OF_ITEMS=Number of Items Checked in
 TICK=Tick
+ITEMS_CHECKED_IN=Items Checked In
