@@ -11,10 +11,11 @@ TEMPLATES_TOOLBAR_CLONE=Clone
 TEMPLATES_TOOLBAR_SAVE_COPY=Save a Copy
 TEMPLATES_TOOLBAR_SET_HOME=Make Default
 TEMPLATES_HEADING_ASSIGNED=Assigned
-TEMPLATES_HEADING_HOME=Home
+TEMPLATES_HEADING_DEFAULT=Default
+TEMPLATES_HEADING_STYLE=Style
 TEMPLATES_HEADING_STYLE_NAME=Style Name
 TEMPLATES_HEADING_TEMPLATE=Template
-TEMPLATES_HEADING_CLIENT=Location
+TEMPLATES_HEADING_TYPE=Type
 
 TEMPLATES_OPTION_ADMINISTRATOR=Administrator
 TEMPLATES_OPTION_SITE=Site
@@ -44,7 +45,7 @@ CONFIG__DEFAULT=Basic Options
 
 TEMPLATES_SUCCESS_N_DUPLICATED=%d styles successfully duplicated.
 
-TEMPLATES_FILTER_CLIENT=- Location -
+TEMPLATES_FILTER_TYPE=- Type -
 TEMPLATES_FILTER_TEMPLATE=- Template -
 
 TEMPLATES_TEMPLATES_FILTER_SEARCH_DESC=Search in template name or folder name.
