@@ -7,7 +7,7 @@
 	<name>BlueStork</name>
 	<creationDate>07/02/09</creationDate>
 	<author>Ron Severdia</author>
-	<authorEmail>ron@kontentdesign.com</authorEmail>
+	<authorEmail>contact@kontentdesign.com</authorEmail>
 	<authorUrl>http://www.kontentdesign.com</authorUrl>
 	<copyright>2009</copyright>
 	<license>GNU General Public License version 2 or later; see LICENSE.txt</license>
