@@ -6,7 +6,7 @@
 	<name>Atomic</name>
 	<creationDate>10/10/09</creationDate>
 	<author>Ron Severdia</author>
-	<authorEmail>ron@kontentdesign.com</authorEmail>
+	<authorEmail>contact@kontentdesign.com</authorEmail>
 	<authorUrl>http://www.kontentdesign.com</authorUrl>
 	<copyright></copyright>
 	<license>GPL</license>
