@@ -29,6 +29,8 @@ $ -> Language fix or change
 
 19-Nov-2009 Ron Severdia
 ^ Restored missing CSS
+# Fixed new CSS issues
+^ Cleaned up UI and language strings for Global Check-in
  
 19-Nov-2009 Andrew Eddie
  ^ Refactor JModelList _getStoreId and _populateState implementations.
